--- a/.github/workflows/jf.yaml
+++ b/.github/workflows/jf.yaml
@@ -7,14 +7,16 @@ on:
 jobs:
   testing-jfrog:
     runs-on: ubuntu-latest
+      
     steps:
+      - uses: actions/checkout@v2
       - uses: jfrog/setup-jfrog-cli@v1
         env:
            JF_ARTIFACTORY_1: ${{ secrets.artifactory_token_1 }}
       - run: |
-          echo 123 > 1.txt 
+          echo 123444 > 1.txt 
           jfrog --version
           jfrog c use priar
           jfrog rt ping
-          jfrog rt u 1.txr artifacts/
+          jfrog rt u 1.txt artifacts/
           
