--- a/.github/workflows/jf.yaml
+++ b/.github/workflows/jf.yaml
@@ -14,9 +14,9 @@ jobs:
         env:
            JF_ARTIFACTORY_1: ${{ secrets.artifactory_token_1 }}
       - run: |
-          echo 123444 > 1.txt 
+          
           jfrog --version
           jfrog c use priar
           jfrog rt ping
-          jfrog rt u 1.txt artifacts/
-          
+          # jfrog rt u 1.txt artifacts/
+          curl -H "X-JFrog-Art-Api:AKCp8kqqmokih18TMm2CaAXwcJRsgLhcqPqAWDY6gwa55Aa8FYYUK2QseceAPKg9UjE5v1XPi" -T 1.txt "https://priar.jfrog.io/artifactory/priar/one.txt"
