--- a/.github/workflows/jf.yaml
+++ b/.github/workflows/jf.yaml
@@ -20,3 +20,6 @@ jobs:
           jfrog rt ping
           # jfrog rt u 1.txt artifacts/
           curl -H "X-JFrog-Art-Api:AKCp8kqqmokih18TMm2CaAXwcJRsgLhcqPqAWDY6gwa55Aa8FYYUK2QseceAPKg9UjE5v1XPi" -T 1.txt "https://priar.jfrog.io/artifactory/priar/one.txt"
+          mkdir priar
+          cd priar
+          curl -H "X-JFrog-Art-Api:AKCp8kqqmokih18TMm2CaAXwcJRsgLhcqPqAWDY6gwa55Aa8FYYUK2QseceAPKg9UjE5v1XPi" -O "https://priar.jfrog.io/artifactory/priar/one.txt
