--- a/.github/workflows/jf.yaml
+++ b/.github/workflows/jf.yaml
@@ -30,7 +30,7 @@ jobs:
           name: homework
           path: 1.txt
       - name: Download 1.txt file from folder called as homework
-        uses: actions/upload-artifact@v2
+        uses: actions/download-artifact@v2
         with:
           name: homework
           
